--- a/housepricepredict.ipynb
+++ b/housepricepredict.ipynb
@@ -399,6 +399,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 24 candidates, totalling 72 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Perform hyperparameter tuning\n",
+    "grid_search=hyperparameter_tuning(X_train,y_train,param_grid)\n",
+    "\n",
+    "## Get the best model\n",
+    "best_model=grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Evaluate the best model\n",
+    "y_pred=best_model.predict(X_test)\n",
+    "mse=mean_squared_error(y_test,y_pred)\n",
+    "r2=best_model.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Hyperparameters: {'max_depth': None, 'min_samples_leaf': 2, 'min_samples_split': 2, 'n_estimators': 200}\n",
+      "Best model: RandomForestRegressor(min_samples_leaf=2, n_estimators=200)\n",
+      "Mean Squared Error: 0.25095043290331687\n",
+      "R2: 0.8042405303481238\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Best Hyperparameters: {grid_search.best_params_}\")\n",
+    "print(f\"Best model: {grid_search.best_estimator_}\")\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "print(f\"R2: {r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## start the MLFLOW Experiments\n",
+    "with mlflow.start_run() as run:\n",
+    "\n",
+    "    ## Log best parameters and metrics\n",
+    "    mlflow.log_param(\"best_n_estimators\",grid_search.best_params_['n_estimators'])\n",
+    "    mlflow.log_param(\"best_max_depth\", grid_search.best_params_['max_depth'])\n",
+    "    mlflow.log_param(\"best_min_samples_split\", grid_search.best_params_['min_samples_split'])\n",
+    "    mlflow.log_param(\"best_min_samples_leaf\", grid_search.best_params_['min_samples_leaf'])\n",
+    "    mlflow.log_metric(\"mse\",mse)\n",
+    "    mlflow.log_metric(\"R-square\",r2)\n",
+    "\n",
+    "    if tracking_url_type_store !='file':\n",
+    "        # mlflow.sklearn.log_model(best_model,\"model\",registered_model_name=\"Best Randomforest Model\")\n",
+    "        mlflow.sklearn.log_model(\n",
+    "        sk_model=best_model,\n",
+    "        artifact_path=\"RandomForestModel\",\n",
+    "        input_example=X_train,\n",
+    "        registered_model_name=\"Best Randomforest Model\",\n",
+    "    )\n",
+    "    else:\n",
+    "        mlflow.sklearn.log_model(best_model,\"model\",signature=signature)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
